refactor: update ChecklistApplicationService to load all SecurityObjects by zoneId